welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:14: error: ';' expected but ')' found.
	else {T(i)=T(i-1))
                         ^